--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -21,6 +22,8 @@
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "typescript": "^5.1.6"
   }
 }
